--- a/requirements.txt
+++ b/requirements.txt
@@ -138,6 +138,7 @@ earthengine-api==0.1.356
 easydict==1.10
 easyocr==1.7.0
 ecos==2.0.12
+efficientnet==1.0.0
 eli5==0.13.0
 emoji==2.5.0
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.5.0/en_core_web_lg-3.5.0-py3-none-any.whl#sha256=c8ac64840c1eb3e3ca7bd38bd1e1c48fb0faeb2449d54d01d5ce629af4595775
@@ -265,6 +266,7 @@ hypertools==0.8.0
 ibis-framework==5.1.0
 idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
 igraph==0.10.4
+image-classifiers==1.0.0
 imagecodecs==2023.3.16
 ImageHash==4.3.1
 imageio==2.28.1
@@ -328,6 +330,7 @@ jupytext==1.14.5
 kaggle==1.5.13
 kaggle-environments==1.12.0
 keras==2.12.0
+Keras-Applications==1.0.8
 keras-tuner==1.3.5
 keyring==23.13.1
 keyrings.google-artifactregistry-auth==1.1.2
@@ -470,6 +473,7 @@ param==1.13.0
 parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
 parsy==2.1
 partd==1.4.0
+patchify==0.2.3
 path==16.6.0
 path.py==12.5.0
 pathos==0.3.0
@@ -628,6 +632,7 @@ scipy==1.10.1
 seaborn==0.12.2
 SecretStorage==3.3.3
 segment-anything @ git+https://github.com/facebookresearch/segment-anything.git@6fdee8f2727f4506cfbbe553e23b895e27956588
+segmentation-models==1.0.1
 segregation==2.4.2
 semver==3.0.0
 Send2Trash @ file:///home/conda/feedstock_root/build_artifacts/send2trash_1682601222253/work
